fixed a bug that was not visible in developement due to React Strict mode. minor changes to responsiveness of the flag animation at the start button

--- a/src/App.scss
+++ b/src/App.scss
@@ -65,7 +65,7 @@ body {
   transform: rotate(10deg);
 }
 .flag-icon {
-  font-size: min(max(40px, 4vw), 80px);
+  font-size: min(max(45px, 5vw), 80px);
   position: absolute;
   top: 50%;
   left: 50%;
